--- a/forgot-password-code-verify.html
+++ b/forgot-password-code-verify.html
@@ -106,6 +106,7 @@
         </main>
 
         <script src="js/app.js"></script>
+        <script type="text/javascript" src="./js/app-theme.js"></script>
 
     </body>
 </html>
