--- a/schedules.html
+++ b/schedules.html
@@ -148,7 +148,7 @@
                     <div class="navbar-collapse collapse">
                         <ul class="navbar-nav navbar-align">
                             <li class="nav-item">
-                                <a class="nav-icon" href="#">
+                                <a id="sgapp-theme-mode-button" class="nav-icon" href="#">
                                     <div class="position-relative">
                                         <i class="align-middle" data-feather="moon"></i>
                                     </div>
@@ -485,6 +485,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.4.0/fullcalendar.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+        <script type="text/javascript" src="./js/app-theme.js"></script>
         
         <script type="text/javascript">
             // Data table
