--- a/toc.html
+++ b/toc.html
@@ -31,7 +31,7 @@
                     <div class="navbar-collapse collapse">
                         <ul class="navbar-nav navbar-align">
                             <li class="nav-item">
-                                <a class="nav-icon" href="#">
+                                <a id="sgapp-theme-mode-button" class="nav-icon" href="#">
                                     <div class="position-relative">
                                         <i class="align-middle" data-feather="moon"></i>
                                     </div>
@@ -214,6 +214,7 @@
         </div>
 
         <script src="js/app.js"></script>
+        <script type="text/javascript" src="./js/app-theme.js"></script>
 
     </body>
 
