--- a/404.html
+++ b/404.html
@@ -102,6 +102,7 @@
         </main>
 
         <script src="js/app.js"></script>
+        <script type="text/javascript" src="./js/app-theme.js"></script>
 
     </body>
 </html>
