--- a/500.html
+++ b/500.html
@@ -93,6 +93,7 @@
         </main>
 
         <script src="js/app.js"></script>
+        <script type="text/javascript" src="./js/app-theme.js"></script>
 
     </body>
 </html>
