--- a/attendance-report.html
+++ b/attendance-report.html
@@ -143,7 +143,7 @@
                     <div class="navbar-collapse collapse">
                         <ul class="navbar-nav navbar-align">
                             <li class="nav-item">
-                                <a class="nav-icon" href="#">
+                                <a id="sgapp-theme-mode-button" class="nav-icon" href="#">
                                     <div class="position-relative">
                                         <i class="align-middle" data-feather="moon"></i>
                                     </div>
@@ -284,7 +284,7 @@
                                         
                                         <div class="row">
                                             <div class="col-12">
-                                                <table class="table">
+                                                <table class="table table-reponsive">
                                                     <tbody>
                                                         <tr>
                                                             <th>Organization</th>
@@ -395,6 +395,7 @@
         <script type="text/javascript" src="js/app.js"></script>
         <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
         <script type="text/javascript" src="./js/image-magnifier-on-hover/script.js"></script>
+        <script type="text/javascript" src="./js/app-theme.js"></script>
 
     </body>
 
