--- a/cao-details.html
+++ b/cao-details.html
@@ -141,7 +141,7 @@
                     <div class="navbar-collapse collapse">
                         <ul class="navbar-nav navbar-align">
                             <li class="nav-item">
-                                <a class="nav-icon" href="#">
+                                <a id="sgapp-theme-mode-button" class="nav-icon" href="#">
                                     <div class="position-relative">
                                         <i class="align-middle" data-feather="moon"></i>
                                     </div>
@@ -233,7 +233,7 @@
                                     <a class="dropdown-item" href="index.html"><i class="align-middle me-1" data-feather="settings"></i> Settings & Privacy</a>
                                     <a class="dropdown-item" href="#"><i class="align-middle me-1" data-feather="help-circle"></i> Help Center</a>
                                     <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item" href="./index.php">Log out</a>
+                                    <a class="dropdown-item" href="./index.html">Log out</a>
                                 </div>
                             </li>
                         </ul>
@@ -463,6 +463,7 @@
         </div>
 
         <script src="js/app.js"></script>
+        <script type="text/javascript" src="./js/app-theme.js"></script>
 
     </body>
 
