--- a/cao-edit.html
+++ b/cao-edit.html
@@ -143,7 +143,7 @@
                     <div class="navbar-collapse collapse">
                         <ul class="navbar-nav navbar-align">
                             <li class="nav-item">
-                                <a class="nav-icon" href="#">
+                                <a id="sgapp-theme-mode-button" class="nav-icon" href="#">
                                     <div class="position-relative">
                                         <i class="align-middle" data-feather="moon"></i>
                                     </div>
@@ -369,6 +369,7 @@
         <script src="js/app.js"></script>
         <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+        <script type="text/javascript" src="./js/app-theme.js"></script>
         
         <script type="text/javascript">
             // Select2
