--- a/forgot-password.html
+++ b/forgot-password.html
@@ -95,6 +95,7 @@
         </main>
 
         <script src="js/app.js"></script>
+        <script type="text/javascript" src="./js/app-theme.js"></script>
 
     </body>
 </html>
