--- a/invoice.html
+++ b/invoice.html
@@ -144,7 +144,7 @@
                     <div class="navbar-collapse collapse">
                         <ul class="navbar-nav navbar-align">
                             <li class="nav-item">
-                                <a class="nav-icon" href="#">
+                                <a id="sgapp-theme-mode-button" class="nav-icon" href="#">
                                     <div class="position-relative">
                                         <i class="align-middle" data-feather="moon"></i>
                                     </div>
@@ -497,8 +497,8 @@
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/pdfmake.min.js"></script>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/vfs_fonts.js"></script>
         <script type="text/javascript" src="https://cdn.datatables.net/buttons/3.0.0/js/buttons.html5.min.js"></script>
-        
         <script type="text/javascript" src="https://cdn.datatables.net/2.0.1/js/dataTables.bootstrap5.js"></script>
+        <script type="text/javascript" src="./js/app-theme.js"></script>
         
         <script type="text/javascript">
             // Data table
