--- a/sign-up.html
+++ b/sign-up.html
@@ -129,6 +129,7 @@
         </main>
 
         <script src="js/app.js"></script>
+        <script type="text/javascript" src="./js/app-theme.js"></script>
 
     </body>
 </html>
