--- a/staffs-add.html
+++ b/staffs-add.html
@@ -144,7 +144,7 @@
                     <div class="navbar-collapse collapse">
                         <ul class="navbar-nav navbar-align">
                             <li class="nav-item">
-                                <a class="nav-icon" href="#">
+                                <a id="sgapp-theme-mode-button" class="nav-icon" href="#">
                                     <div class="position-relative">
                                         <i class="align-middle" data-feather="moon"></i>
                                     </div>
@@ -486,6 +486,7 @@
         <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Dropify/0.2.2/js/dropify.min.js" integrity="sha512-8QFTrG0oeOiyWo/VM9Y8kgxdlCryqhIxVeRpWSezdRRAvarxVtwLnGroJgnVW9/XBRduxO/z1GblzPrMQoeuew==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        <script type="text/javascript" src="./js/app-theme.js"></script>
         
         <script type="text/javascript">
             
