--- a/staffs.html
+++ b/staffs.html
@@ -145,7 +145,7 @@
                     <div class="navbar-collapse collapse">
                         <ul class="navbar-nav navbar-align">
                             <li class="nav-item">
-                                <a class="nav-icon" href="#">
+                                <a id="sgapp-theme-mode-button" class="nav-icon" href="#">
                                     <div class="position-relative">
                                         <i class="align-middle" data-feather="moon"></i>
                                     </div>
@@ -622,6 +622,7 @@
         <script type="text/javascript" src="https://cdn.datatables.net/2.0.1/js/dataTables.bootstrap5.js"></script>
         <script type="text/javascript" src="https://cdn.datatables.net/responsive/3.0.0/js/dataTables.responsive.js"></script>
         <script type="text/javascript" src="https://cdn.datatables.net/responsive/3.0.0/js/responsive.bootstrap5.js"></script>
+        <script type="text/javascript" src="./js/app-theme.js"></script>
         
         <script type="text/javascript">
             // Data table
