--- a/organizations.html
+++ b/organizations.html
@@ -538,7 +538,7 @@
                 });
  
                 table.on('click', 'tbody tr', function (e) {
-//                    e.currentTarget.classList.toggle('selected');
+                    e.currentTarget.classList.toggle('selected');
                 });
                 
                 // To get selected rows
