--- a/schedules.html
+++ b/schedules.html
@@ -527,6 +527,7 @@
                         right: 'prevYear,prev,today,next,nextYear'
                     },
                     events: datas,
+                    firstDay: 1,
                     eventLimit: true,
                     eventRender: function(event, element) {
                         element.find('.fc-title').html('<i class="fa-solid fa-user"></i> '+event.title+'<br>'
