--- a/staffs.html
+++ b/staffs.html
@@ -279,7 +279,7 @@
                                             <div class="col-12">
                                                 <form class="row g-3">
                                                     <div class="col-auto">
-                                                        <a class="btn btn-info" href="./schedules-add.html">
+                                                        <a class="btn btn-info" href="./staffs-add.html">
                                                             <i class="align-middle" data-feather="plus"></i> Add 
                                                         </a>
                                                     </div>
