Select2 plugin border will be invisible for home page only

--- a/home.html
+++ b/home.html
@@ -265,7 +265,7 @@
                     </div>
                 </nav>
 
-                <main id="sgapp-main" class="content">
+                <main id="sgapp-main" class="content sgapp-home">
                     <div class="container-fluid p-0">
 
                         <div class="row">
