--- a/staffs.html
+++ b/staffs.html
@@ -331,7 +331,7 @@
                                         <table id="my-table" class="table table-striped table-hover nowrap" style="width:100%">
                                             <thead>
                                                 <tr>
-                                                    <th scope="col">
+                                                    <th scope="col" class="notexport">
                                                         <div class="mt-0">
                                                             <input type="checkbox" />
                                                         </div>
@@ -339,7 +339,7 @@
                                                     <th scope="col">Names</th>
                                                     <th scope="col">Email</th>
                                                     <th scope="col">Position</th>
-                                                    <th scope="col"></th>
+                                                    <th scope="col" class="notexport"></th>
                                                 </tr>
                                             </thead>
                                             <tbody>
@@ -703,7 +703,7 @@
                                     text: 'Copy',
                                     className: 'btn btn-default',
                                     exportOptions: {
-                                        columns: 'th:not(:last-child)'
+                                        columns: ':not(.notexport)'
                                     }
                                 },
                                 {
@@ -711,7 +711,7 @@
                                     text: 'Excel',
                                     className: 'btn btn-default',
                                     exportOptions: {
-                                        columns: 'th:not(:last-child)'
+                                        columns: ':not(.notexport)'
                                     }
                                 },
                                 {
@@ -719,7 +719,7 @@
                                     text: 'CSV',
                                     className: 'btn btn-default',
                                     exportOptions: {
-                                        columns: 'th:not(:last-child)'
+                                        columns: ':not(.notexport)'
                                     }
                                 },
                                 {
@@ -727,7 +727,7 @@
                                     text: 'PDF',
                                     className: 'btn btn-default',
                                     exportOptions: {
-                                        columns: 'th:not(:last-child)'
+                                        columns: ':not(.notexport)'
                                     }
                                 },
                             ]
