--- a/attendance.html
+++ b/attendance.html
@@ -155,71 +155,6 @@
                                     </div>
                                 </a>
                             </li>
-                            <!-- <li class="nav-item dropdown">
-                                <a class="nav-icon dropdown-toggle" href="#" id="alertsDropdown" data-bs-toggle="dropdown">
-                                    <div class="position-relative">
-                                        <i class="align-middle" data-feather="bell"></i>
-                                        <span class="indicator">4</span>
-                                    </div>
-                                </a>
-                                <div class="dropdown-menu dropdown-menu-lg dropdown-menu-end py-0" aria-labelledby="alertsDropdown">
-                                    <div class="dropdown-menu-header">
-                                        4 New Notifications
-                                    </div>
-                                    <div class="list-group">
-                                        <a href="#" class="list-group-item">
-                                            <div class="row g-0 align-items-center">
-                                                <div class="col-2">
-                                                    <i class="text-danger" data-feather="alert-circle"></i>
-                                                </div>
-                                                <div class="col-10">
-                                                    <div class="text-dark">Update completed</div>
-                                                    <div class="text-muted small mt-1">Restart server 12 to complete the update.</div>
-                                                    <div class="text-muted small mt-1">30m ago</div>
-                                                </div>
-                                            </div>
-                                        </a>
-                                        <a href="#" class="list-group-item">
-                                            <div class="row g-0 align-items-center">
-                                                <div class="col-2">
-                                                    <i class="text-warning" data-feather="bell"></i>
-                                                </div>
-                                                <div class="col-10">
-                                                    <div class="text-dark">Lorem ipsum</div>
-                                                    <div class="text-muted small mt-1">Aliquam ex eros, imperdiet vulputate hendrerit et.</div>
-                                                    <div class="text-muted small mt-1">2h ago</div>
-                                                </div>
-                                            </div>
-                                        </a>
-                                        <a href="#" class="list-group-item">
-                                            <div class="row g-0 align-items-center">
-                                                <div class="col-2">
-                                                    <i class="text-primary" data-feather="home"></i>
-                                                </div>
-                                                <div class="col-10">
-                                                    <div class="text-dark">Login from 192.186.1.8</div>
-                                                    <div class="text-muted small mt-1">5h ago</div>
-                                                </div>
-                                            </div>
-                                        </a>
-                                        <a href="#" class="list-group-item">
-                                            <div class="row g-0 align-items-center">
-                                                <div class="col-2">
-                                                    <i class="text-success" data-feather="user-plus"></i>
-                                                </div>
-                                                <div class="col-10">
-                                                    <div class="text-dark">New connection</div>
-                                                    <div class="text-muted small mt-1">Christina accepted your request.</div>
-                                                    <div class="text-muted small mt-1">14h ago</div>
-                                                </div>
-                                            </div>
-                                        </a>
-                                    </div>
-                                    <div class="dropdown-menu-footer">
-                                        <a href="#" class="text-muted">Show all notifications</a>
-                                    </div>
-                                </div>
-                            </li> -->
 
                             <li class="nav-item">
                                 <input id="main-search" type="search" class="form-control mt-1 mx-1" placeholder="Search">
@@ -602,6 +537,16 @@
 
                                             </div>
                                             <div class="tab-pane fade" id="nav-calendar" role="tabpanel" aria-labelledby="nav-calendar-tab">
+                                                <div class="row mt-3 mb-4">
+                                                    <section class="col-12 text-center">
+                                                        <span class="fw-bold">Legend:</span>
+                                                        
+                                                        <span class="badge rounded-pill text-bg-success text-light p-2 mx-2 my-2">Accepted</span>
+                                                        <span class="badge rounded-pill text-bg-warning text-light p-2 mx-2 my-2">Pending</span>
+                                                        <span class="badge rounded-pill text-bg-danger text-light p-2 mx-2 my-2">Rejected</span>
+                                                    </section>
+                                                </div>
+
                                                 <div id='calendar'></div>
                                             </div>
                                         </div>
@@ -775,10 +720,32 @@
                     },
                     
                     eventRender: function(event, element) {
-                        element.find('.fc-title').html('<i class="fa-solid fa-user"></i> '+event.title+'<br>'
-                            +'<i class="fa-solid fa-user"></i> '+event.staff_number+'<br>'
-                            +'<i class="fa-regular fa-clock"></i>  '+'Start Time: '+moment(event.start).format('HH:mm') + '<br/>'
-                            + '<i class="fa-regular fa-clock"></i>  '+'End Time: '+moment(event.end).format('HH:mm'));
+                        const defaultAvatar = "img/avatar_default.png";
+
+                        let avatar = (event.avatar === null) ? defaultAvatar : `https://schedule.bangladeshbajar.com/backend/staff/${event.avatar}`;
+
+                        let eventHtml = `
+                            <div class="sgapp-event-cell-wrapper">
+                                <div class="sgapp-event-cell-row">
+                                    <span class="sgapp-event-cell-column">
+                                        <img class="sgapp-event-avatar" src="${avatar}" alt="Staff image">
+                                    </span>
+                                    <span class="sgapp-event-cell-column sgapp-event-title">
+                                        ${event.title}
+                                    </span>
+                                </div>
+
+                                <div class="sgapp-event-cell-row sgapp-event-staff-id">
+                                    ${event.staff_number}
+                                </div>
+
+                                <div class="sgapp-event-cell-row sgapp-event-time">
+                                    <i class="fa-regular fa-clock"></i> ${moment(event.start).format('HH:mm')} ${((moment(event.end).format('HH:mm') !== "Invalid date") ? "- " + moment(event.end).format('HH:mm') : "")}
+                                </div>
+                            </div>
+                        `;
+
+                        element.find('.fc-title').html(eventHtml);
                     },
 
                     eventMouseover: function(event, jsEvent, view) {
@@ -791,6 +758,7 @@
                                 + '<i class="fa-regular fa-clock"></i> End Time: '+moment(event.end).format('HH:mm')+'<br>'
                                 + '<i class="fa-solid fa-industry"></i> Organization Name: '+event.organization_name+'<br>'
                                 + '<i class="fa-solid fa-location-pin"></i> Address: '+event.address+'<br>'
+
                             ,
                             html: true,
                             container: 'body',
