--- a/schedules.html
+++ b/schedules.html
@@ -606,10 +606,32 @@
                     },
                     
                     eventRender: function(event, element) {
-                        element.find('.fc-title').html('<i class="fa-solid fa-user"></i> '+event.title+'<br>'
-                            +'<i class="fa-solid fa-user"></i> '+event.staff_number+'<br>'
-                            +'<i class="fa-regular fa-clock"></i>  '+'Start Time: '+moment(event.start).format('HH:mm') + '<br/>'
-                            + '<i class="fa-regular fa-clock"></i>  '+'End Time: '+moment(event.end).format('HH:mm'));
+                        const defaultAvatar = "img/avatar_default.png";
+
+                        let avatar = (event.avatar === null) ? defaultAvatar : `https://schedule.bangladeshbajar.com/backend/staff/${event.avatar}`;
+
+                        let eventHtml = `
+                            <div class="sgapp-event-cell-wrapper">
+                                <div class="sgapp-event-cell-row">
+                                    <span class="sgapp-event-cell-column">
+                                        <img class="sgapp-event-avatar" src="${avatar}" alt="Staff image">
+                                    </span>
+                                    <span class="sgapp-event-cell-column sgapp-event-title">
+                                        ${event.title}
+                                    </span>
+                                </div>
+
+                                <div class="sgapp-event-cell-row sgapp-event-staff-id">
+                                    ${event.staff_number}
+                                </div>
+
+                                <div class="sgapp-event-cell-row sgapp-event-time">
+                                    <i class="fa-regular fa-clock"></i> ${moment(event.start).format('HH:mm')} ${((moment(event.end).format('HH:mm') !== "Invalid date") ? "- " + moment(event.end).format('HH:mm') : "")}
+                                </div>
+                            </div>
+                        `;
+
+                        element.find('.fc-title').html(eventHtml);
                     },
 
                     eventMouseover: function(event, jsEvent, view) {
@@ -622,6 +644,7 @@
                                 + '<i class="fa-regular fa-clock"></i> End Time: '+moment(event.end).format('HH:mm')+'<br>'
                                 + '<i class="fa-solid fa-industry"></i> Organization Name: '+event.organization_name+'<br>'
                                 + '<i class="fa-solid fa-location-pin"></i> Address: '+event.address+'<br>'
+
                             ,
                             html: true,
                             container: 'body',
