--- a/attendance.html
+++ b/attendance.html
@@ -539,7 +539,7 @@
                                             <div class="tab-pane fade" id="nav-calendar" role="tabpanel" aria-labelledby="nav-calendar-tab">
                                                 <div class="row mt-3 mb-4">
                                                     <section class="col-12 text-center">
-                                                        <span class="fw-bold">Legend:</span>
+                                                        <span class="fw-bold">Legenda:</span>
                                                         
                                                         <span class="badge rounded-pill text-bg-success text-light p-2 mx-2 my-2">Accepted</span>
                                                         <span class="badge rounded-pill text-bg-warning text-light p-2 mx-2 my-2">Pending</span>
