--- a/schedules-add.html
+++ b/schedules-add.html
@@ -361,6 +361,18 @@
                             <div class="col-sm-12 col-md-6">
                                 <div class="card">
                                     <div class="card-body">
+                                        <div class="row mt-3 mb-4">
+                                            <section class="col-12 text-center">
+                                                <span class="fw-bold">Legend:</span>
+                                                
+                                                <span class="badge rounded-pill text-bg-success text-light p-2 mx-2 my-2">Accepted</span>
+                                                <span class="badge rounded-pill text-bg-warning text-light p-2 mx-2 my-2">Pending</span>
+                                                <span class="badge rounded-pill text-bg-danger text-light p-2 mx-2 my-2">Rejected</span>
+                                            </section>
+                                        </div>
+
+                                        <h2 class="text-center mb-2">Availability</h2>
+
                                         <div id='calendar'></div>
                                     </div>
                                 </div>
