--- a/home.html
+++ b/home.html
@@ -386,9 +386,9 @@
                     weekNumbers: true,
                     dayMaxEventRows: true, // for all non-TimeGrid views
                     views: {
-                        timeGrid: {
+                        dayGridMonth: {
                             dayMaxEventRows: 2, // adjust to 6 only for timeGridWeek/timeGridDay
-                            // eventLimit: 2
+                            eventLimit: 2
                         }
                     },
                     eventDidMount: function(args) {
